// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBarPluginFilters should render 1`] = `
<DocumentFragment>
  <div
    class="flex relative z-20 items-center text-theme-primary-400"
    data-testid="SearchBarPluginFilters"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mr-8 cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchBarPluginFilters should render categories 1`] = `
<DocumentFragment>
  <div
    class="flex relative z-20 items-center text-theme-primary-400"
    data-testid="SearchBarPluginFilters"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mr-8 cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 fjgGxm opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="py-4 px-6 w-64"
          >
            <div
              class="mb-1 font-semibold text-theme-secondary-text"
            >
              Category
            </div>
            <fieldset>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-game"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Game
                </span>
              </label>
            </fieldset>
            <div
              class="my-4 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center pl-2 cursor-pointer text-theme-primary-500 hover:text-theme-primary-600 hover:underline"
              data-testid="SearchBarPluginFilters-reset"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  reset.svg
                </svg>
              </div>
              <span
                class="pl-2"
              >
                Reset Filters
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchBarPluginFilters should render default categories 1`] = `
<DocumentFragment>
  <div
    class="flex relative z-20 items-center text-theme-primary-400"
    data-testid="SearchBarPluginFilters"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mr-8 cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 fjgGxm opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="py-4 px-6 w-64"
          >
            <div
              class="mb-1 font-semibold text-theme-secondary-text"
            >
              Category
            </div>
            <fieldset>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-game"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Game
                </span>
              </label>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-utility"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Utility
                </span>
              </label>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-exchange"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Exchange
                </span>
              </label>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-other"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Other
                </span>
              </label>
            </fieldset>
            <div
              class="my-4 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center pl-2 cursor-pointer text-theme-primary-500 hover:text-theme-primary-600 hover:underline"
              data-testid="SearchBarPluginFilters-reset"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  reset.svg
                </svg>
              </div>
              <span
                class="pl-2"
              >
                Reset Filters
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchBarPluginFilters should render with null initialValues 1`] = `
<DocumentFragment>
  <div
    class="flex relative z-20 items-center text-theme-primary-400"
    data-testid="SearchBarPluginFilters"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mr-8 cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 fjgGxm opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
        data-testid="dropdown__content"
      >
        <div>
          <div
            class="py-4 px-6 w-64"
          >
            <div
              class="mb-1 font-semibold text-theme-secondary-text"
            >
              Category
            </div>
            <fieldset>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-utility"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Utility
                </span>
              </label>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-game"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Game
                </span>
              </label>
            </fieldset>
            <div
              class="my-4 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center pl-2 cursor-pointer text-theme-primary-500 hover:text-theme-primary-600 hover:underline"
              data-testid="SearchBarPluginFilters-reset"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  reset.svg
                </svg>
              </div>
              <span
                class="pl-2"
              >
                Reset Filters
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchBarPluginFilters should render with selected values 1`] = `
<DocumentFragment>
  <div
    class="flex relative z-20 items-center text-theme-primary-400"
    data-testid="SearchBarPluginFilters"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mr-8 cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 fjgGxm opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="py-4 px-6 w-64"
          >
            <div
              class="mb-1 font-semibold text-theme-secondary-text"
            >
              Category
            </div>
            <fieldset>
              <label
                class="block flex items-center px-2 pb-1 mb-1 space-x-2 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              >
                <span>
                  <input
                    checked=""
                    class="Checkbox-sc-17gwqiq-0 iGvDni"
                    color="success"
                    data-testid="SearchBarPluginFilters-category-game"
                    name="category"
                    type="checkbox"
                  />
                </span>
                <span
                  class="mt-1"
                >
                  Game
                </span>
              </label>
            </fieldset>
            <div
              class="my-4 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center pl-2 cursor-pointer text-theme-primary-500 hover:text-theme-primary-600 hover:underline"
              data-testid="SearchBarPluginFilters-reset"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  reset.svg
                </svg>
              </div>
              <span
                class="pl-2"
              >
                Reset Filters
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
